# ct-mri-medical-imaging-workflows

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt
docker/ct/: Dockerfile  run.sh
docker/docs/: Dockerfile  run.sh
docker/mri/: Dockerfile  run.sh
docs/: Makefile  api_reference.rst  conf.py  ct_guide.rst  index.rst  installation_environment.rst  make.bat  mri_guide.rst  quickstart.rst  testing_validation.rst  workflow_guide.rst
docs/_static/: custom.css
docs/_templates/autosummary/: package.rst
scripts/: run_ct.sh  run_docs.sh  run_mri.sh
src/a2mi/: __init__.py
src/a2mi/common/: __init__.py  io.py
src/a2mi/ct/: __init__.py  exercise_1_1.py  exercise_1_2.py  exercise_1_3.py  main.py
src/a2mi/mri/: __init__.py  exercise_2_1.py  exercise_2_2.py  main.py
tests/: conftest.py  test_common_io.py  test_package_smoke.py
tests/ct/: test_ct_cli_main.py  test_exercise_1_1.py  test_exercise_1_2.py  test_exercise_1_3.py
tests/mri/: test_exercise_2_1.py  test_exercise_2_2.py  test_mri_cli_main.py
