[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2-coursework"
version = "0.1.0"
description = "Medical imaging coursework package for CT and MRI exercises."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "matplotlib",
  "scikit-image",
  "scipy",
  "tqdm",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
